# KPSM-2024-2025

./: .gitignore  README.md  pyproject.toml
exercise_2/: ukol1.ipynb  ukol2.ipynb
exercise_3/: uloha1.ipynb  uloha2.ipynb
fuzzy/: ukol1.ipynb
mnohorozmerne/: vina.Rmd  vina.html
regression1/: ukol1.ipynb  ukol2.ipynb  ukol3.ipynb
regression_R/: uloha1.html  uloha1.rmd  uloha2.Rmd  uloha2.html  uloha3.Rmd  uloha3.html
