[project]
name = "psm"
version = "0.1.0"
description = "Course work for Advanced Statistical Methods UJEP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.2.0",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pingouin>=0.5.5",
    "pyloess>=0.1.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[tool.ruff]
line-length = 99
src = ["detection"]
include = ["pyproject.toml", "detection/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["detection"]
force-sort-within-sections = true
